Fix T60067: some modifiers don't use shape keys correctly